src/objects/schedule__c.object
<CustomObject>
    <fields>
        <fullName>biko__c</fullName>
        <label>説明</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>enddatetime__c</fullName>
        <label>終了日時</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pjname__c</fullName>
        <label>関連プロジェクト</label>
        <referenceTo>pjmng__c</referenceTo>
        <relationshipName>pjmngDxqu</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>place__c</fullName>
        <label>場所</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>startdatetime__c</fullName>
        <label>開始日時</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>会議管理</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>イベント名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>